--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -1,21 +1,26 @@
 .wrapper {
   flex-wrap: wrap;
   margin-right: 100px;
+  flex-direction: column;
+  margin-top: 30px;
 }
+
 
 .scroller {
   overflow: hidden;
   height: 400px;
   padding: 8px;
+  width: 100%;
 }
+
 
 .scroller > div {
   display: flex;
   flex-direction: column;
   overflow: auto;
   height: 100%;
-
 }
+
 
 .button {
   margin-left: 15px;
@@ -28,11 +33,13 @@
   justify-content: flex-end;
   margin: 40px;
   padding: 20px;
+
 }
 
 .elements > div:first-child {
   margin-left: 35px;
 }
+
 
 .elements > div:last-child {
   margin-left: 35px;
@@ -45,4 +52,45 @@
 
 .price > span {
   margin-right: 15px; }
+
+.topBun {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    background: rgb(28, 21, 47);
+    padding: 20px;
+    min-height: 100px;
+    border-radius: 40px 40px 20px 20px;
+
+  }
+
+.bottomBun {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    background: rgb(28, 21, 47);
+    padding: 20px;
+    min-height: 100px;
+    border-radius: 20px 20px 40px 40px;
+  }
+
+
+
+.choiceIngredients {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    margin: 10px auto auto 25px;
+    padding: 20px;
+    border-radius: 10px;
+    background: rgb(28, 21, 47);
+    min-height: 100px;
+
+  }
 
