--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -6,14 +6,7 @@
   min-height: 100vh;
   }
   
-  .grid {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  row-gap: 20px;
-  margin-top: 20px;
-  gap: 50px;
-  }
-  
+
   .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -23,17 +16,25 @@
   grid-template-columns: 1fr;
   }
   
-  .paragraph {
-  grid-column: 1 / 3;
-  margin: 0;
-  font-weight: 800;
-  font-size: 36px;
-  line-height: 40px;
-  margin-left: 40px;
-  }
   
   .main {
-    display: flex;
-    Justify-content: center
+    flex-grow: 1;
+    padding-top: 50px;
+    display: grid; 
+    grid-template-columns: 1fr; 
+    max-width: 1280px; 
+    margin: 0 auto; 
+    padding-left: 16px; 
+    padding-right: 16px;
   }
+  
 
+  .title {
+    grid-column: span 2; 
+    margin: 0;
+    font-weight: bold; 
+    font-size: 36px; 
+    line-height: 1.2; 
+    margin-left: 20px; 
+  }
+  
