--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -63,6 +63,7 @@
     padding: 20px;
     min-height: 100px;
     border-radius: 40px 40px 20px 20px;
+    font-family: 'JetBrains Mono';
 
   }
 
@@ -76,6 +77,7 @@
     padding: 20px;
     min-height: 100px;
     border-radius: 20px 20px 40px 40px;
+    font-family: 'JetBrains Mono';
   }
 
 
@@ -91,6 +93,6 @@
     border-radius: 10px;
     background: rgb(28, 21, 47);
     min-height: 100px;
-
+    font-family: 'JetBrains Mono';
   }
 
