--- a/src/components/burger-ingredients/BurgerIngredients.module.css
+++ b/src/components/burger-ingredients/BurgerIngredients.module.css
@@ -28,6 +28,9 @@
 .title {
   grid-column-start: 1;
   grid-column-end: 3;
+  font-family: 'JetBrains Mono';
+  font-weight: 700;
+  font-size: 24px;
 }
 
  
