--- a/src/components/ingredient-item/IngredientItem.module.css
+++ b/src/components/ingredient-item/IngredientItem.module.css
@@ -23,3 +23,14 @@
 
 .price > span {
   margin-right: 8px; }
+
+
+.item {
+  position: relative;
+}
+
+.counterWrapper {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
