--- a/src/components/ingredient-details/IngredientDetails.module.css
+++ b/src/components/ingredient-details/IngredientDetails.module.css
@@ -1,20 +1,47 @@
-.parametres {
+
+  
+  .details {
+  text-align: center;
+  width: 100%;
   display: flex;
-justify-content: space-between;
-}
+  align-items: center;
+  
+  }
+  
+  .wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  
+  }
+
 
 .column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.details {
-  text-align: center;
-}
-
-.div {
   font-family: 'Iceland';
   font-style: normal;
   font-weight: 400;
+  margin-right: 20px;
+  line-height: 16px;
+  color: #8585AD;
+  
+}
+
+.name {
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: 'Iceland';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+.title {
+  font-family: 'Iceland';
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 20px;
+  
 }
