delete some trash

--- a/src/components/burger-constructor/BurgerConstructor.module.css
+++ b/src/components/burger-constructor/BurgerConstructor.module.css
@@ -34,7 +34,17 @@
 .price {
   font-weight: 400;
   font-size: 50px;
+  margin-left: 300px;
+  
 }
+
+.button {
+  font-weight: 400;
+  font-size: 50px;
+  margin-left: 270px;
+  
+}
+
 
 .price > span {
   margin-right: 15px; }
