--- a/src/components/order-details/OrderDetails.module.css
+++ b/src/components/order-details/OrderDetails.module.css
@@ -4,14 +4,14 @@
   justify-content: center;
   align-items: center;
   color: #fff;
+  height: 400px;
+  width: 300px
 }
 .title {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 24px;
   line-height: 30px;
   text-align: center;
-  margin-top: 60px;
-  margin-bottom: 60px;
 }
 .bottom {
   text-align: center;
@@ -27,8 +27,15 @@
 }
 
 .image {
-  display: block;
+
   width: 100px;
   height: 100px;
   margin: 50px;
+  
+}
+
+.waitin {
+  font-size: large;
+  font-family: 'Iceland';
+  font-style: normal;
 }
