--- a/src/components/app-header/AppHeader.module.css
+++ b/src/components/app-header/AppHeader.module.css
@@ -2,6 +2,7 @@
   padding: 16px 0;
   background-color: #1245;
   font-family: 'JetBrains Mono';
+  
 }
 .container {
   display: flex;
@@ -56,3 +57,23 @@ left: 320px;
   color: #fff;
 }
 
+.noActive{
+  color:#8585ad;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+
+
+.profile{
+
+font-family: 'JetBrains Mono';
+font-size: 16px;
+text-decoration: none;
+color: #8585AD;
+display: inline-flex;
+align-items: center;
+
+
+}
