--- a/src/components/feed-archive/feed-info/feed-info.module.css
+++ b/src/components/feed-archive/feed-info/feed-info.module.css
@@ -5,9 +5,11 @@
     height: 100%;
     justify-content: center;
     font-family: 'Iceland';
-    max-width: 600px; 
+    width: 500px; 
+    max-width: 800px; 
     max-height: 1000px; 
     margin: 0 auto; 
+    padding-top: 20px;
     
 }
 
@@ -43,7 +45,12 @@
     display: flex;
     align-items: center;
     font-size: 16px;
-    justify-content: flex-start;
+
+}
+
+.ingredient{
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -63,19 +70,23 @@
 }
 
 .image {
-    width: 100px;
+width: 70px;
     
 }
 
 .price {
     display: flex;
-    margin-left: 100px;
+    align-items: center;
+    font-size: 16px;
     justify-content: flex-end;
+
 
 }
 .primaryFeed{
     margin-left: 10px;
     float: right;
+    display: flex;
+
 
 }
 
