--- a/src/components/feed-archive/feed/feed.module.css
+++ b/src/components/feed-archive/feed/feed.module.css
@@ -1,7 +1,7 @@
 .section {
     margin-top: 30px;
-    width: 600px;
-    font-family: 'Iceland';
+    max-width: 700px;
+    font-family: 'JetBrains Mono';
 }
 
 .scroll {
@@ -11,10 +11,12 @@
 
 .wrapper{
 margin-top: 10px;
+padding-top: 10px;
 }
 
 .title {
     margin-top: 10px;
+    margin-bottom: 5px;
     margin-left: 20px;
     font-size: 18px;
 }
@@ -24,15 +26,20 @@ margin-top: 10px;
     margin-top: 10px;
     font-size: 22px;
     margin-left: 20px;
+    font-family: 'Iceland';
+}
+
+.time{
+    font-family: 'JetBrains Mono';
 }
 .dates {
     background-color: rgba(52, 52, 52, 0.359);
     border-radius: 40px;
     margin-right: 30px;
-    height: 200px;
+    height: 220px;
     justify-content: center;
     padding: 10px;
-    
+
 }
 
 .time {
@@ -51,7 +58,7 @@ margin-top: 10px;
 .images{
 
     padding-left: 10px;
-    padding-bottom: 10px;
+    padding-top: 20px;
    
 }
 
@@ -65,6 +72,7 @@ margin-top: 10px;
     border-radius: 50%;
     border: 4px solid #372c6c;
     box-sizing: border-box;
+    z-index: 1;
 }
 
 
@@ -72,8 +80,10 @@ margin-top: 10px;
 .imagesPlus {
 
     font-size: 60px;
-    padding-right: 30px;
-    z-index: 2;
+    padding-right: 40px;
+    margin-right: 100px;
+    padding-top: 15px;
+    z-index: 12;
 }
     
 
@@ -94,9 +104,12 @@ margin-top: 10px;
     float: right;
     display: flex;
     margin-right: 30px;
-    padding-top: 20px;
+    padding-top: 40px;
     width: 64px;
     height: 64px;
+    font-family: 'Iceland';
+    text-align: center;
+    
 }  
 
 
@@ -113,10 +126,11 @@ margin-top: 10px;
 }
 
 .total{
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .state{
     padding-left: 20px;
     color: #228d94;
+    margin: 0;
 }
