--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,7 +1,7 @@
 .modal {
   display: grid;
   position: absolute;
-  place-items: center;
+  place-items: censter;
   margin: auto;
   top: 30%;
   left: 30%;
@@ -11,6 +11,7 @@
   border: 1px solid ;
   border-radius: 40px;
   z-index: 12;
+
 }
 
 .closeButton {
