--- a/src/components/burger-ingredients/BurgerIngredients.module.css
+++ b/src/components/burger-ingredients/BurgerIngredients.module.css
@@ -2,20 +2,28 @@
   display: flex;
   gap: 5px;
   font-family: 'JetBrains Mono';
+  padding-bottom: 15px;
+
+
 }
 
 .tabTitle {
   padding-right: 20px;
   font-family: 'JetBrains Mono';
+  
+
 }
 
 .custom-scroll {
+
   max-height: 496px;
   overflow-y: auto;
 }
 
 .sectionWrap {
   padding: 20px;
+  width: 650px;
+  
 
 }
 
@@ -35,17 +43,21 @@
 .scroller {
   overflow-y: auto;
   max-height: 500px; 
+  
 }
 
 .ingredientsWrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding-top: 40px;
   font-family: 'JetBrains Mono';
+  
 }
+
 
 
 
@@ -56,6 +68,9 @@
   align-items: center;
   text-align: center;
   gap: 10px;
+  height: 200px;
+  width: 250px;
+
 
 }
 
