--- a/src/components/burger-constructor/BurgerConstructor.module.scss
+++ b/src/components/burger-constructor/BurgerConstructor.module.scss
@@ -3,22 +3,18 @@
   flex-direction: column;
   margin-top: 100px;
   margin-left: 40px;
+  @media screen and (max-width: 600px) {
+    margin-left: 0;
+  }
 }
 
-
-
 .ingredient {
-
-
   margin: 10px;
-  
-
-
 }
 
 .custom-scroll {
-  overflow-y: auto; 
-  max-height: 240px; 
+  overflow-y: auto;
+  max-height: 240px;
 }
 
 .bottom {
@@ -27,33 +23,40 @@
   align-items: flex-start;
   justify-content: flex-end;
   margin-top: 40px;
-  padding: 10px;
-}
 
+  @media screen and (max-width: 800px) {
+    display: block;
+    margin: auto;
+  }
+}
 
 .price {
   font-weight: 400;
   font-size: 50px;
   margin-left: 300px;
-  
+  @media screen and (max-width: 800px) {
+    display: flex;
+    margin: auto;
+  }
 }
 
 .button {
   font-weight: 400;
   font-size: 50px;
   margin-left: 270px;
-  
+  @media screen and (max-width: 800px) {
+    display: flex;
+    margin: auto;
+  }
 }
 
-
 .price > span {
-  margin-right: 15px; }
+  margin-right: 15px;
+}
 
-  
 .ingredientInside {
   padding: 4px;
 }
-
 
 .scroller {
   overflow: hidden;
@@ -62,10 +65,9 @@
   width: 100%;
 }
 
-
-.scroller{
+.scroller {
   overflow-y: auto;
-  max-height: 400px; 
+  max-height: 400px;
   height: auto;
 }
 
@@ -79,8 +81,7 @@
   padding: 20px;
   min-height: 100px;
   border-radius: 40px 40px 20px 20px;
-  font-family: 'JetBrains Mono';
-
+  font-family: "JetBrains Mono";
 }
 
 .bottomBun {
@@ -93,10 +94,8 @@
   padding: 20px;
   min-height: 100px;
   border-radius: 20px 20px 40px 40px;
-  font-family: 'JetBrains Mono';
+  font-family: "JetBrains Mono";
 }
-
-
 
 .choiceIngredients {
   display: flex;
@@ -110,5 +109,11 @@
   border-radius: 10px;
   background: rgb(28, 21, 47);
   min-height: 100px;
-  font-family: 'JetBrains Mono';
+  font-family: "JetBrains Mono";
+}
+
+.paragraph {
+  gap: 15px;
+  display: flex;
+  align-items: center;
 }
