--- a/src/components/contacts/Contacts.module.scss
+++ b/src/components/contacts/Contacts.module.scss
@@ -3,7 +3,7 @@
   font-family: "JetBrains Mono";
   display: flex;
   align-items: center;
-  justify-content: center; /* Центрируем содержимое по горизонтали */
+  justify-content: center;
   width: 100%;
 }
 
@@ -21,6 +21,11 @@
   @media screen and (max-width: 800px) {
     gap: 30px;
   }
+  @media screen and (max-width: 1100px) {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
 }
 
 .imageSize {
@@ -35,9 +40,25 @@
 }
 
 .contactsText,
-.supportLinkText {
+.supportLinkText,
+.button,
+.supportLink {
   color: #8585ad;
 
   display: flex;
   align-items: center;
+  text-decoration: none;
+}
+
+.button {
+  display: inline-flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.button:hover,
+.contactsText:hover,
+.supportLinkText:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
