--- a/src/components/burger-ingredients/BurgerIngredients.module.scss
+++ b/src/components/burger-ingredients/BurgerIngredients.module.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
   }
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1100px) {
     display: flex;
     flex-direction: row;
     max-width: 100%;
@@ -38,6 +38,10 @@
 .sectionWrap {
   padding: 20px;
   max-width: 650px;
+
+  @media screen and (max-width: 1100px) {
+    display: contents;
+  }
 
   @media screen and (max-width: 800px) {
     padding: 0;
@@ -84,7 +88,7 @@
     align-content: center;
   }
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1100px) {
     display: flex;
     flex-direction: row;
     align-content: stretch;
