--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -8,7 +8,7 @@
   max-width: 1400px;
   margin: 0 auto;
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1100px) {
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -19,9 +19,19 @@
   grid-column: 1 / span 2;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  @media screen and (max-width: 1100px) {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
 }
 
 .contacts {
   grid-column: 1 / span 2;
   grid-row: 2;
+  @media screen and (max-width: 1100px) {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
 }
