--- a/src/components/burger-constructor/BurgerConstructor.module.scss
+++ b/src/components/burger-constructor/BurgerConstructor.module.scss
@@ -25,7 +25,7 @@
   margin-top: 40px;
 
   @media screen and (max-width: 800px) {
-    display: block;
+    display: flex;
     margin: auto;
   }
 }
