--- a/src/components/contacts/Contacts.module.scss
+++ b/src/components/contacts/Contacts.module.scss
@@ -9,7 +9,9 @@
 
 .contactsRow {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+
   justify-content: space-around;
   margin: 0 auto;
   padding-left: 16px;
