--- a/src/components/app-header/AppHeader.module.scss
+++ b/src/components/app-header/AppHeader.module.scss
@@ -26,14 +26,14 @@
 .logo {
   margin: 0 auto;
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 950px) {
     display: none;
   }
 }
 
 .logoSmall {
   display: none;
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 950px) {
     display: flex;
   }
 }
@@ -68,6 +68,7 @@
   align-items: center;
   text-decoration: none;
   color: #fff;
+  gap: 3px;
 }
 
 .noActive {
@@ -75,6 +76,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  gap: 3px;
 }
 
 .profile {
@@ -84,6 +86,7 @@
   color: #8585ad;
   display: inline-flex;
   align-items: center;
+  gap: 3px;
 }
 
 .linkText {
