--- a/src/components/contacts/Contacts.module.scss
+++ b/src/components/contacts/Contacts.module.scss
@@ -1,5 +1,5 @@
 .main {
-  padding: 50px 0;
+  padding: 30px 0;
   font-family: "JetBrains Mono";
   display: flex;
   align-items: center;
@@ -15,11 +15,11 @@
   margin: 0 auto;
   padding-left: 16px;
   padding-right: 16px;
-  gap: 50px;
+
   width: 100%;
 
   @media screen and (max-width: 1100px) {
-    gap: 30px;
+    gap: 20px;
     flex-direction: column;
   }
 }
@@ -31,6 +31,8 @@
 .lastElements {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 20px;
+  gap: 40px;
 }
 
 .first {
@@ -38,8 +40,8 @@
 }
 
 .imageSize {
-  width: 64px;
-  height: 64px;
+  width: 32px;
+  height: 32px;
 }
 
 .contactWrapper,
@@ -83,11 +85,17 @@
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: 9;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .closeButton {
   display: flex;
   background-color: #000000;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
 }
