--- a/src/pages/connect-form/connect-form.module.scss
+++ b/src/pages/connect-form/connect-form.module.scss
@@ -80,20 +80,23 @@ input:-webkit-autofill:active {
   height: 48px;
   max-width: 316px;
   min-width: 200px;
-  background-color: #8585ad;
+  background-color: #2828f3;
   border-radius: 10px;
   display: flex;
   gap: 10px;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
+  opacity: 0.7;
 
   &:hover {
-    background-color: #7b7bdd;
+    background-color: #2828f3;
+    opacity: 1;
   }
 
   &:disabled {
-    opacity: 0.5;
+    opacity: 0.4;
+    background-color: #2828f3;
   }
 
   @media screen and (max-width: 960px) {
